Making regression tree

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -1,8 +1,8 @@
 LDFLAGS = `root-config --glibs`
 CFLAGS = `root-config --cflags`
 installname = mkhbb
-exename = testhbbtree
 flatclass = hbbfile
+regclass = regfile
 corrections = data/corrections.d
 effs = data/btag_effs.root
 data = data/data.d
@@ -14,7 +14,8 @@ vers = 013
 
 pandainc = ${CMSSW_BASE}/src
 pandalib = ${CMSSW_BASE}/lib/${SCRAM_ARCH}
-target = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/$(exename)
+target = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/testhbbtree
+regression = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/regresstree
 install = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/$(installname)
 pandalibs = -lPandaTreeFramework -lPandaTreeObjects -lPandaTreeUtils
 #testfile = /mnt/hadoop/scratch/dabercro/panda/$(vers)/*.root
@@ -29,7 +30,7 @@ all: $(target) $(effs)
 $(install): $(target)
 	cp $(target) $(install)
 
-$(tarball): $(install) $(checker) $(thejq) $(data)
+$(tarball): $(install) $(checker) $(thejq) $(data) $(regression) $(effs)
 	test -d ${CMSSW_BASE}/data || mkdir ${CMSSW_BASE}/data
 	tar -czf $(tarball) --directory ${CMSSW_BASE} bin lib external data
 
@@ -59,6 +60,16 @@ $(target): slimmer.cpp include/*.h include/checkrun.h include/feedpanda.h includ
 	$(external) -lrt -g \
 	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(target) slimmer.cpp
 
+$(regression): regression.cpp include/*.h include/feedregression.h include/$(regclass).h \
+	${CROMBIEPATH}/src/include/crombie/*.h \
+	include/roccor/RoccoR.cc include/jecsys \
+	${CMSSW_BASE}/lib/${SCRAM_ARCH}/*.so \
+	${PWD}/flags.sh
+	g++ -Iinclude -I$(pandainc) -I${CROMBIEPATH}/src/include \
+	$(external) -lrt -g \
+	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -o $(regression) regression.cpp
+
+
 include/jecsys:
 	cd include; git clone https://github.com/miquork/jecsys.git; cd jecsys; git checkout Summer16_23Sep2016V4
 
@@ -74,8 +85,16 @@ data/jec/jec.d: data/jec/download.url
 	cd data/jec; rm *.tar.gz; rm *.txt; wget -i download.url; for f in *.tar.gz; do tar -xvf $$f '*_AK4PFchs.txt' '*_AK8PFPuppi.txt'; done
 	touch data/jec/jec.d
 
+include/feedregression.h: include/[!f]*.h regression.cpp include/$(regclass).h ${CROMBIEPATH}/scripts/feedpanda.pl
+	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def \
+	include/genjet.h include/regression.h include/regression.h include/$(regclass).h regression.cpp include/feedregression.h
+
 include/feedpanda.h: include/[!f]*.h include/$(flatclass).h include/checkrun.h slimmer.cpp ${CROMBIEPATH}/scripts/feedpanda.pl
 	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def include/*.h slimmer.cpp include/feedpanda.h
+
+include/$(regclass).h: $(regclass).txt ${CROMBIEPATH}/scripts/maketree.py $(corrections)
+	crombie maketree $(regclass).txt
+	mv $(regclass).h include/
 
 include/$(flatclass).h: $(flatclass).txt ${CROMBIEPATH}/scripts/maketree.py $(corrections)
 	crombie maketree $(flatclass).txt
@@ -88,9 +107,11 @@ $(corrections): data/downloads.url
 	cd data; rm *.root; rm *.csv; rm *.xml; rm *.pb; wget -i downloads.url
 	touch $(corrections)
 
-.PHONY: clean test install
+.PHONY: clean test install reg
 
-install: $(tarball) $(install) $(effs)
+reg: $(regression)
+
+install: $(tarball)
 
 testdir = ${HOME}/public_html/plots/testhbb_$(vers)
 
@@ -100,7 +121,7 @@ test: $(target) $(effs) data/jec/jec.d
 	# Move old test.root to a place for comparison
 	test ! -f test.root || mv test.root old
 	# Don't keep around new test file that's garbage
-	input_dir='/test/pandaf/$(vers)/this' $(exename) $(testfile) test.root || rm test.root
+	input_dir='/test/pandaf/$(vers)/this' testhbbtree $(testfile) test.root || rm test.root
 	# Kill if test file generation didn't work
 	test -f test.root
 	cp test.root new
@@ -111,4 +132,4 @@ test: $(target) $(effs) data/jec/jec.d
 	test -z ${CMSSW_BASE} || cut='|!hbb_gen|hbb_gen' crombie plotdump test.root $(testdir)
 
 clean:
-	rm $(target) include/$(flatclass).h include/feedpanda.h include/checkrun.h $(effs) $(data) $(corrections) include/roccor/RoccoR.cc data/jec/jec.d
+	rm $(target) include/$(flatclass).h include/feedpanda.h include/checkrun.h $(effs) $(data) $(corrections) include/roccor/RoccoR.cc data/jec/jec.d $(regression) $(install)
